--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "version": "1.7.1",
   "type": "module",
   "description": "Add a style and an image to your QR code Vue3",
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
-  "types": "src/index.d.ts",
+  "main": "src/index.ts",
+  "module": "src/index.ts",
+  "types": "src/index.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
+    }
+  },
   "files": [
     "src",
     "lib",
@@ -19,7 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^4.6.2",
-    "@vue/compiler-sfc": "*",
+    "@vue/compiler-sfc": "^3.5.13",
     "canvas": "^2.11.2",
     "clean-webpack-plugin": "^4.0.0",
     "copyfiles": "^2.4.1",
@@ -28,7 +34,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom-fifteen": "^1.0.2",
     "path": "^0.12.7",
@@ -36,13 +42,13 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.5.4",
-    "vite": "^4.5.3",
+    "typescript": "^5.7.2",
+    "vite": "^4.5.5",
     "vite-plugin-dts": "^2.3.0",
-    "vue": "^3.3.2",
+    "vue": "^3.5.13",
     "vue-loader": "^17.4.2",
-    "vue-tsc": "^2.1.6",
-    "webpack": "^5.94.0",
+    "vue-tsc": "^2.1.10",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.2",
     "webpack-merge": "^5.10.0"
